Fix checkstyle errors — a few remain